--- a/my-company/src/index.css
+++ b/my-company/src/index.css
@@ -71,11 +71,5 @@ button:focus-visible {
 
 nav{
   background-color: #213547;
-  padding: 4px 0;
-}
-
-nav li{
-  margin-right: 36px;
-  display: inline-block;
-  list-style: none;
+  padding: 15px 20px;
 }
